src/styles/layout/Header.scss
@import "../core/variables";
@import "../core/mediaqueries";

.header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 50px;
  @include mediaTablet() {
    justify-content: space-around;
    /* gap: 10px; */
  }
  &_menu {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    position: absolute;
    left: 5%;
    top: 70px;
    @include mediaTablet() {
      position: relative;
      left: 0;
      top: 11px;
      flex-direction: row;
      gap: 5px;
    }
  }
}
#light .header {
  color: $darkColor1;
}

#dark .header {
  color: whitesmoke;
}
.mobile-nav {
  margin-top: 80px;
  font-family: $mainFont;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  @include mediaTablet() {
    display: none;
  }
  &-icon {
    position: absolute;
    left: 5%;
    top: 20px;
    color: $darkColor1;
    cursor: pointer;
    &:hover {
      color: $secondColor;
    }
    @include mediaTablet() {
      display: none;
    }
  }
}

.mobile-nav .nav-link {
  padding: 5px;

  cursor: pointer;
  &:visited {
    color: black;
  }
  &:hover {
    color: $secondColor;
  }
}

.regnav {
  font-family: $mainFont;
  display: none;
  @include mediaTablet() {
    display: flex;
    gap: 5px;
    margin-top: 27px;
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    z-index: 2;
    height: 70px;
    min-height: 70px;
  }
}
.regnav .nav-link {
  padding: 5px;

  cursor: pointer;
  &:visited {
    color: black;
  }
  &:hover {
    color: $secondColor;
  }
}
.regnav ul li {
  @include mediaTablet() {
    display: inline-block;
    position: relative;
    text-align: center;
    width: 100px;
  }
}
.regnav ul li:hover:after {
  @include mediaTablet() {
    content: "";
    position: absolute;
    top: 18px;
    background: $secondColor;
    width: 10px;
    height: 10px;
    border-radius: 100%;
    left: calc(51% - 9px);
  }
}

.active {
  font-weight: bold;
}

.fa-brands {
  font-size: 30px;
  padding: 5px;
}
#light .fa-brands {
  color: $darkColor1;
  &:hover {
    color: $highLight1;
  }
}

#dark .fa-brands {
  color: whitesmoke;
  &:hover {
    color: $highLight2;
  }
}
.socialmedia {
  &-list {
    display: flex;
    justify-content: center;
  }
}

.switch {
  transform: translateX(40px);
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
  &-label {
    font-family: $mainFont;
  }

  @include mediaTablet() {
    transform: translateX(-20px);
  }
}

